--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -8,9 +8,19 @@ import Carousel from '../components/Carousel.astro';
 //Images
 import PerfilInfinito from '../assets/imgCategorias/perfilInfinito.png';
 import PerfilLuna from '../assets/imgCategorias/perfilLuna.png';
-import carousel1 from '../assets/imgCarrusel/carrusel1.jpg';
-import carousel2 from '../assets/imgCarrusel/carrusel2.jpg';
-import carousel3 from '../assets/imgCarrusel/carrusel3.jpg';
+
+//Carousel infinito
+import infinito1 from '../assets/imgCategorias/infinito1.jpg';
+import infinito2 from '../assets/imgCategorias/infinito2.png';
+import infinito3 from '../assets/imgCategorias/infinito3.png';
+import infinito4 from '../assets/imgCategorias/infinito4.jpg';
+//Carousel luna
+import luna1 from '../assets/imgCategorias/luna1.png';
+import luna2 from '../assets/imgCategorias/luna2.png';
+import luna3 from '../assets/imgCategorias/luna3.png';
+import luna4 from '../assets/imgCategorias/luna4.png';
+
+
 ---
 
 <BasePageLayout
@@ -93,13 +103,10 @@ import carousel3 from '../assets/imgCarrusel/carrusel3.jpg';
       </p>
       <Carousel
         images={[
-          {
-            src: carousel1,
-            alt: 'Paisaje del Valle de Arbas',
-            caption: 'Valle de Arbas - Vista Panorámica',
-          },
-          { src: carousel2, alt: 'Sendero de la carrera', caption: 'Senderos naturales' },
-          { src: carousel3, alt: 'Participantes en meta', caption: 'Edición anterior' },
+          { src: infinito1, alt: 'Vista inferior de las Tres Marías', caption: 'Las Tres Marías - Vista desde la falda' },
+          { src: infinito2, alt: 'Bajada a Caldas', caption: 'Bajada a Caldas de Luna' },
+          { src: infinito3, alt: 'Vista de la Barragana', caption: 'La Barragana - Vista desde el Valle' },
+          { src: infinito4, alt: 'Vista del Palero', caption: 'Collado del Palero' },
         ]}
       />
       <p class="info-text pt-4">
@@ -217,13 +224,10 @@ import carousel3 from '../assets/imgCarrusel/carrusel3.jpg';
       </p>
       <Carousel
         images={[
-          {
-            src: carousel1,
-            alt: 'Paisaje del Valle de Arbas',
-            caption: 'Valle de Arbas - Vista Panorámica',
-          },
-          { src: carousel2, alt: 'Sendero de la carrera', caption: 'Senderos naturales' },
-          { src: carousel3, alt: 'Participantes en meta', caption: 'Edición anterior' },
+          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
+          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
+          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
+          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
         ]}
       />
       <p class="info-text pt-4">
@@ -295,13 +299,10 @@ import carousel3 from '../assets/imgCarrusel/carrusel3.jpg';
       </p>
       <Carousel
         images={[
-          {
-            src: carousel1,
-            alt: 'Paisaje del Valle de Arbas',
-            caption: 'Valle de Arbas - Vista Panorámica',
-          },
-          { src: carousel2, alt: 'Sendero de la carrera', caption: 'Senderos naturales' },
-          { src: carousel3, alt: 'Participantes en meta', caption: 'Edición anterior' },
+          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
+          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
+          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
+          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
         ]}
       />
       <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
@@ -368,13 +369,10 @@ import carousel3 from '../assets/imgCarrusel/carrusel3.jpg';
       </p>
       <Carousel
         images={[
-          {
-            src: carousel1,
-            alt: 'Paisaje del Valle de Arbas',
-            caption: 'Valle de Arbas - Vista Panorámica',
-          },
-          { src: carousel2, alt: 'Sendero de la carrera', caption: 'Senderos naturales' },
-          { src: carousel3, alt: 'Participantes en meta', caption: 'Edición anterior' },
+          { src: luna1, alt: 'Vista desde ?', caption: '¿¿¿¿?????' },
+          { src: luna2, alt: 'Valle de Bajada a Caldas', caption: 'Valle de bajada a Caldas' },
+          { src: luna3, alt: 'Collado ?¿', caption: 'Collado ???¿¿¿¿' },
+          { src: luna4, alt: '¿¿¿?????', caption: '?¿?¿¿?¿?¿' },
         ]}
       />
       <p class="info-text pt-4">Breve descripción del recorrido de la carrera.</p>
