Add normativa and resultados pages with styles for Trail Valle de Arbas
- Created normativa.astro page with regulations and mandatory equipment details.
- Created resultados.astro page to display results and photos from the 2025 edition.
- Added pastEditions.css for styling past editions of the event.
- Implemented reusable components for results display, including ResultsCard, CategoryResults, and RunnerItem.
- Enhanced layout with BasePageLayout and SectionTitle components for better structure and readability.

--- a/src/components/ImageHeader.astro
+++ b/src/components/ImageHeader.astro
@@ -4,10 +4,14 @@ const { imgName, title } = Astro.props as { imgName: keyof typeof images; title:
 
 import HeaderCategorias from '../assets/imgHeaders/HeaderCategorias.jpg';
 import HeaderInscripcion from '../assets/imgHeaders/HeaderInscripcion.jpg';
+import HeaderNormativa from '../assets/imgHeaders/HeaderNormativa.jpg';
+import HeaderUbicaciones from '../assets/imgHeaders/HeaderUbicaciones.jpg';
 
 const images = {
   HeaderCategorias,
   HeaderInscripcion,
+  HeaderNormativa,
+  HeaderUbicaciones
 };
 
 const mainImage = images[imgName];
