--- a/src/components/StickyMenu.astro
+++ b/src/components/StickyMenu.astro
@@ -19,7 +19,7 @@ import logo from '../assets/logo/ms-icon-144x144.png';
       <li><a href="/inscripcion" class="block px-4 py-2 text-white lg:text-black">Inscripción</a></li>
       <li><a href="/normativa" class="block px-4 py-2 text-white lg:text-black">Normativa</a></li>
       <li><a href="/horario" class="block px-4 py-2 text-white lg:text-black">Horario y Ubicaciones</a></li>
-      <li><a href="/resultados" class="block px-4 py-2 text-white lg:text-black">Fotos y Resultados</a></li>
+      <li><a href="/resultados" class="block px-4 py-2 text-white lg:text-black">Resultados y Fotos</a></li>
       <li><a href="/info" class="block px-4 py-2 text-white lg:text-black">Otros</a></li>
     </ul>
   </nav>
