Add schedule components with responsive styles
- Implemented AccessSection component for displaying section titles and content.
- Created LocationCard component to show location details with a link to Google Maps.
- Developed ScheduleDay component to represent a day's schedule with a title.
- Added ScheduleItem component for individual schedule entries, including time and description.
- Centralized styles in ScheduleStyles.astro for better maintainability and consistency across components.

--- a/src/components/ImageHeader.astro
+++ b/src/components/ImageHeader.astro
@@ -6,12 +6,14 @@ import HeaderCategorias from '../assets/imgHeaders/HeaderCategorias.jpg';
 import HeaderInscripcion from '../assets/imgHeaders/HeaderInscripcion.jpg';
 import HeaderNormativa from '../assets/imgHeaders/HeaderNormativa.jpg';
 import HeaderUbicaciones from '../assets/imgHeaders/HeaderUbicaciones.jpg';
+import HeaderResultados from '../assets/imgHeaders/HeaderResultados.jpg';
 
 const images = {
   HeaderCategorias,
   HeaderInscripcion,
   HeaderNormativa,
-  HeaderUbicaciones
+  HeaderUbicaciones,
+  HeaderResultados
 };
 
 const mainImage = images[imgName];
