--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -14,7 +14,7 @@ import SectionTitle from '../components/SectionTitle.astro';
 <BasePageLayout
   title="Resultados y Fotos"
   description="Resultados, récords y fotos del Trail Valle de Arbas"
-  image="HeaderCategorias"
+  image="HeaderResultados"
   imgTitle="Resultados y Fotos"
 >
   <section>
