Enhance animations and styles across multiple pages
- Added fade-in and stagger effects to various sections in horario.astro and info.astro for improved user experience.
- Introduced a new SectionTitle component for consistent title styling in inscripcion.astro and normativa.astro.
- Updated global CSS to include new animation classes and effects, enhancing visual appeal and interactivity.
- Implemented JavaScript for scroll-triggered animations, button effects, and page transitions to create a smoother navigation experience.
- Added expanding line animations for section titles to draw attention and improve aesthetics.

--- a/src/components/fields/HugeInfoField.astro
+++ b/src/components/fields/HugeInfoField.astro
@@ -3,32 +3,36 @@ const { icon, title, description, link } = Astro.props;
 ---
 
 <div class="flex flex-col items-center justify-center gap-2 main-container">
-  <svg
-    class="w-7 h-7 text-[#e49a69] mb-1"
-    aria-hidden="true"
-    xmlns="http://www.w3.org/2000/svg"
-    width="24"
-    height="24"
-    fill="none"
-    viewBox="0 0 24 24"
-  >
-    <path
-      stroke="currentColor"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d={icon}></path>
-  </svg>
-
-  <h4 class="text-lg font-bold text-center">{title}</h4>
-  <p class="text-sm text-center">{description}</p>
-  <a href={link} class="button-link">
-    <button
-      class="mt-2 px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
+  {icon && 
+    <svg
+      class="w-7 h-7 text-[#e49a69] mb-1"
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      fill="none"
+      viewBox="0 0 24 24"
     >
-      Más información
-    </button>
-  </a>
+      <path
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d={icon}></path>
+    </svg>
+  }
+
+  {title && <h4 class="text-lg font-bold text-center">{title}</h4>}
+  {description && <p class="text-sm text-center">{description}</p>}
+  {link && 
+    <a href={link} class="button-link">
+      <button
+        class="mt-2 px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
+      >
+        Más información
+      </button>
+    </a>
+  }
 </div>
 
 <style>
