--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -59,4 +59,7 @@ const fullTitle = "Valle de Arbas | " + title;
 	<meta name="twitter:image:alt" content={title} />
 	<meta name="twitter:site" content="@trailvallearbas" />
 	<meta name="twitter:creator" content="@trailvallearabas" />
+	
+	<!-- Script de animaciones -->
+	<script src="/scripts/animations.js" defer></script>
 </head>
