--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -8,10 +8,11 @@ interface Props {
 const { title, subtitle, className = "" } = Astro.props;
 ---
 
-<div class={`title-center pt-4 ${className} flex flex-col items-center mx-auto max-w-[1200px]`}>
-  <h2 class="text-2xl md:text-2xl sm:text-xl font-bold title-underline mt-8 mb-4">{title}</h2>
+<div class={`title-center pt-4 ${className} flex flex-col items-center mx-auto max-w-[1200px] reveal-element`}>
+  <h2 class="text-2xl lg:text-3xl sm:text-xl font-bold mt-8 mb-4">{title}</h2>
+  <div class="expanding-line mt-2 mb-6"></div>
   {subtitle && (
-    <p class="info-text text-center max-w-[1200px] text-base md:text-lg" set:html={subtitle}>
+    <p class="info-text text-center max-w-[1200px] text-base md:text-lg lg:text-xl fade-in-up" set:html={subtitle}>
     </p>
   )}
 </div>
