--- a/src/pages/normativa.astro
+++ b/src/pages/normativa.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import BasePageLayout from '../layouts/BasePageLayout.astro';
+import SectionTitle from '../components/SectionTitle.astro';
 ---
 
 <BasePageLayout
@@ -9,13 +10,11 @@ import BasePageLayout from '../layouts/BasePageLayout.astro';
   image="HeaderNormativa"
   imgTitle="Normativa y material obligatorio"
 >
-  <section>
-    <div class="title-center pt-4">
-      <h2 class="text-2xl font-bold title-underline mt-8 mb-4">Reglamento general</h2>
-    </div>
-    <p class="info-text w-[90%] text-center max-w-[1200px]">
-      La participación en la carrera <strong>Trail Valle de Arbas</strong> implica la aceptación de este reglamento y la ética de la carrera.
-    </p>
+  <section class="mb-10 lg:mb-16">
+    <SectionTitle
+      title="Reglamento general"
+      subtitle="La participación en la carrera <strong>Trail Valle de Arbas</strong> implica la aceptación de este reglamento y la ética de la carrera."
+    />
 
     <article class="pt-10 w-[90%] mx-auto max-w-[1200px]">
       <h3 class="text-xl font-semibold mt-4 mb-4 lg:mt-8 lg:text-2xl">Requisitos de los participantes</h3>
@@ -83,11 +82,11 @@ import BasePageLayout from '../layouts/BasePageLayout.astro';
     </article>
   </section>
 
-  <section>
-    <div class="title-center pt-4">
-      <h2 class="text-2xl font-bold title-underline mt-12 mb-4">Material obligatorio</h2>
-    </div>
-    
+  <section class="mb-10 lg:mb-16">
+    <SectionTitle
+      title="Material obligatorio y seguridad"
+      subtitle="Es fundamental llevar el material obligatorio para garantizar la seguridad de todos los participantes."
+    />
     <article id="material-obligatorio" class="pt-10 w-[90%] mx-auto max-w-[1200px]">
       <h3 class="text-xl font-semibold mb-4 lg:text-2xl">Material obligatorio para todas las pruebas</h3>
       <p class="info-text mb-4">
@@ -130,9 +129,10 @@ import BasePageLayout from '../layouts/BasePageLayout.astro';
   </section>
 
   <section>
-    <div class="title-center pt-4">
-      <h2 class="text-2xl font-bold title-underline mt-8 mb-4">Seguridad y emergencias</h2>
-    </div>
+    <SectionTitle
+      title="Seguridad y emergencias"
+      subtitle="Protocolos y procedimientos para garantizar la seguridad de todos los participantes durante la carrera."
+    />
     
     <article id="seguridad" class="pt-10 w-[90%] mx-auto max-w-[1200px] mb-20">
       <h3 class="text-xl font-semibold mb-4 lg:text-2xl">Protocolo de seguridad</h3>
